# CometX

./: .env.example  .gitignore  README.md  package.json
agent/: dom_distiller.py  main.py  memory.py  planner.py  requirements.txt  vision.py
docs/: architecture.md
extension/: background.js  content.js  manifest.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: browser.rs  commands.rs  lib.rs  main.rs  session.rs
src/components/BrowserFrame/: BrowserFrame.css  BrowserFrame.tsx
src/components/NovaBar/: NovaBar.css  NovaBar.tsx
src/styles/: nova.css
