[package]
name = "cometx"
version = "0.1.0"
edition = "2021"

[lib]
name = "cometx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cometx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
